--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -10,11 +10,52 @@
     name: unzip
     state: present
 
+- name: ensure nomad download directory
+  file:
+    state: directory
+    path: "{{ nomad_download_dir }}"
+    recurse: yes
+
+- name: download nomad checksum file
+  get_url:
+    url: "{{ nomad_checksum_url }}"
+    dest: "{{ nomad_download_dir }}/{{ nomad_checksum_file }}"
+
+- name: write hashicorp gpg key file
+  copy:
+    src: hashicorp.asc
+    dest: "{{ nomad_download_dir }}/hashicorp.asc"
+    owner: root
+    group: root
+    mode: 0644
+  when: "{{ nomad_verify_checksum_signature }} | bool"
+
+- name: import hashicorp gpg key
+  command: gpg --import  "{{ nomad_download_dir }}/hashicorp.asc"
+  changed_when: no
+  when: "{{ nomad_verify_checksum_signature }} | bool"
+
+- name: download nomad checksum signature file
+  get_url:
+    url: "{{ nomad_signature_url }}"
+    dest: "{{ nomad_download_dir }}/{{ nomad_signature_file }}"
+  when: "{{ nomad_verify_checksum_signature }} | bool"
+
+- name: verify checksum file
+  command: gpg --batch --verify {{ nomad_download_dir }}/{{ nomad_signature_file }} {{ nomad_download_dir }}/{{ nomad_checksum_file }}
+  changed_when: no
+  when: "{{ nomad_verify_checksum_signature }} | bool"
+
+- name: get checksum of nomad zip
+  command:  grep {{ nomad_zip }} {{ nomad_download_dir }}/{{ nomad_checksum_file }}
+  register: nomad_checksum
+  changed_when: no
+
 - name: download nomad zip
   get_url:
     url: "{{ nomad_zip_url }}"
-    dest: "{{ nomad_zip_dir }}/{{ nomad_zip }}"
-    checksum: "{{ nomad_zip_checksum }}"
+    dest: "{{ nomad_download_dir }}/{{ nomad_zip }}"
+    checksum: "sha256:{{ nomad_checksum.stdout.split(' ') | first }}"
 
 - name: create nomad binary directory
   file:
@@ -26,7 +67,7 @@
 
 - name: extract nomad zip
   unarchive:
-    src: "{{ nomad_zip_dir }}/{{ nomad_zip }}"
+    src: "{{ nomad_download_dir }}/{{ nomad_zip }}"
     dest: "{{ nomad_bin_dir }}/nomad-{{ nomad_version }}"
     copy: no
     creates: "{{ nomad_bin_dir }}/nomad-{{ nomad_version }}/nomad"
