--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,81 +1,72 @@
 ---
-- name: update apt
-  apt:
-    update_cache: true
-    cache_valid_time: 3600
-  when: ansible_os_family == 'Debian'
-
 - name: install unzip
   package:
     name: unzip
     state: present
 
-- name: ensure nomad download directory
+- name: ensure nomad directories
   file:
     state: directory
-    path: "{{ nomad_download_dir }}"
-    recurse: true
+    path: "{{ item }}"
+  with_items:
+    - "{{ nomad_install_dir }}"
+    - "{{ nomad_bin_dir }}"
 
 - name: download nomad checksum file
   get_url:
     url: "{{ nomad_checksum_url }}"
-    dest: "{{ nomad_download_dir }}/{{ nomad_checksum_file }}"
+    dest: "{{ nomad_install_dir }}/{{ nomad_checksum_file }}"
 
 - name: write hashicorp gpg key file
   copy:
     src: hashicorp.asc
-    dest: "{{ nomad_download_dir }}/hashicorp.asc"
+    dest: /etc/hashicorp.asc
     owner: root
     group: root
     mode: 0644
   when: nomad_verify_checksum_signature | bool
 
 - name: import hashicorp gpg key
-  command: gpg --import  "{{ nomad_download_dir }}/hashicorp.asc"
+  command: gpg --import  /etc/hashicorp.asc
   changed_when: false
   when: nomad_verify_checksum_signature | bool
 
 - name: download nomad checksum signature file
   get_url:
     url: "{{ nomad_signature_url }}"
-    dest: "{{ nomad_download_dir }}/{{ nomad_signature_file }}"
+    dest: "{{ nomad_install_dir }}/{{ nomad_signature_file }}"
   when: nomad_verify_checksum_signature | bool
 
 - name: verify checksum file
-  command: gpg --batch --verify {{ nomad_download_dir }}/{{ nomad_signature_file }} {{ nomad_download_dir }}/{{ nomad_checksum_file }}
+  command: gpg --batch --verify {{ nomad_install_dir }}/{{ nomad_signature_file }} {{ nomad_install_dir }}/{{ nomad_checksum_file }}
   changed_when: false
   when: nomad_verify_checksum_signature | bool
 
 - name: get checksum of nomad zip
-  command: grep {{ nomad_zip }} {{ nomad_download_dir }}/{{ nomad_checksum_file }}
+  command: grep {{ nomad_zip }} {{ nomad_install_dir }}/{{ nomad_checksum_file }}
   register: nomad_checksum
   changed_when: false
 
 - name: download nomad zip
   get_url:
     url: "{{ nomad_zip_url }}"
-    dest: "{{ nomad_download_dir }}/{{ nomad_zip }}"
+    dest: "{{ nomad_install_dir }}/{{ nomad_zip }}"
     checksum: "sha256:{{ nomad_checksum.stdout.split(' ') | first }}"
-
-- name: create nomad binary directory
-  file:
-    state: directory
-    path: "{{ nomad_bin_dir }}/nomad-{{ nomad_version }}"
-    owner: root
-    group: root
-    recurse: true
 
 - name: extract nomad zip
   unarchive:
-    src: "{{ nomad_download_dir }}/{{ nomad_zip }}"
-    dest: "{{ nomad_bin_dir }}/nomad-{{ nomad_version }}"
-    copy: false
-    creates: "{{ nomad_bin_dir }}/nomad-{{ nomad_version }}/nomad"
+    src: "{{ nomad_install_dir }}/{{ nomad_zip }}"
+    dest: "{{ nomad_install_dir }}"
+    remote_src: true
+    creates: "{{ nomad_install_dir }}/nomad"
+    owner: root
+    group: root
+    mode: 0755
   notify: restart nomad
 
 - name: symlink nomad binary
   file:
     state: link
-    src: "{{ nomad_bin_dir }}/nomad-{{ nomad_version }}/nomad"
+    src: "{{ nomad_install_dir }}/nomad"
     dest: "{{ nomad_bin_dir }}/nomad"
   notify: restart nomad
